SignServer 3.3.0
----------------

Major changes:
 - Drop support for JBoss 4.2.x.

TODO


Notice:
 - Apache Ant 1.8.0 or later is now required to build SignServer.
 - The property "custom.commandfactory" is no longer supported. See the manual 
   for how to add custom Admin or Client CLI commands.
 - The Admin CLI now ignores the "-host" argument if present.


SignServer 3.2.2
----------------

Major new features and improvements:
 - Support for denying timestamp requests unless the time source is considered
   in sync
 - Support for dispatching timestamp requests to different timestamp 
   units/signers
 - Support for accessing workers using the /worker/* URL pattern gives easier 
   filtering with a proxy
 - Signer's status report can now be offered by a worker and not just a timed 
   service
 - The log field PROCESS_SUCCESS can now have the value "false" if a request 
   failed
 - Hostname displayed in title bar of AdminGUI simplifies when managing multiple 
   servers

Bug fixes:
 - Build failure on W7 X64
 - Sample code using web services should use HTTPS
 - URL for documentation only working with JBoss 4 

Notice:
 - Support for the cluster classloader has been deprecated and support for it 
   will be dropped in a future release.
 - The status property "INSYNC" is now called "TIMESOURCE0_INSYNC". Applications 
   relaying on the name of this property should be updated.
 - The time stamp signer will now log PROCESS_SUCCESS with the value false
   in case the response has a status other than GRANTED.

Read the full changelog for details (https://jira.primekey.se/browse/DSS?report=com.atlassian.jira.plugin.system.project:changelog-panel).


SignServer 3.2.1
----------------

Major new features and improvements:

 - Improve servlet error handling
 - Deploy documentation with application
 - Improved API for archiving
 - Support for signing PDFs with document restrictions
 - Support for PDF permissions enforcement
 - Support for modifying PDF permissions